@@ -6,16 +6,10 @@
     <groupId>io.searchbox</groupId>
     <artifactId>jest-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>1.0.4-SNAPSHOT</version>
     <name>Jest Parent POM</name>
     <description>Parent POM for Jest - ElasticSearch Java rest client</description>
     <url>https://github.com/searchbox-io/Jest</url>
-
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
 
     <modules>
         <module>jest-common</module>
@@ -37,14 +31,12 @@
         <url>git@github.com:searchbox-io/Jest.git</url>
     </scm>
 
-    <repositories>
-        <repository>
-            <id>sonatype</id>
-            <name>Sonatype Groups</name>
-            <url>https://oss.sonatype.org/content/groups/public/</url>
-        </repository>
-    </repositories>
-
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <developers>
         <developer>
@@ -68,67 +60,92 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <elasticsearch.version>1.0.0</elasticsearch.version>
+        <elasticsearch.version>1.7.5</elasticsearch.version>
 
-        <lucene.version>4.6.1</lucene.version>
+        <lucene.version>4.10.4</lucene.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <randomizedtesting.version>2.0.15</randomizedtesting.version>
+        <randomizedtesting.version>2.1.14</randomizedtesting.version>
+        <groovy.version>2.4.4</groovy.version>
+        <mustache.version>0.8.13</mustache.version>
 
-        <httpcore.version>4.3.1</httpcore.version>
-        <httpclient.version>4.3.2</httpclient.version>
-        <httpAsyncClient.version>4.0</httpAsyncClient.version>
-        <httpclientandroidlib.version>1.1.2</httpclientandroidlib.version>
+        <httpcore.version>4.4.4</httpcore.version>
+        <httpclient.version>4.5.2</httpclient.version>
+        <httpAsyncClient.version>4.1.1</httpAsyncClient.version>
+        <httpclientandroid.version>4.3.5.1</httpclientandroid.version>
 
-        <slf4j.version>1.7.5</slf4j.version>
-        <log4j.version>1.2.16</log4j.version>
+        <slf4j.version>1.7.13</slf4j.version>
 
-        <guava.version>16.0</guava.version>
-        <gson.version>2.2.4</gson.version>
-        <mockito.version>1.9.5</mockito.version>
+        <guava.version>19.0</guava.version>
+        <gson.version>2.6.2</gson.version>
+        <mockito.version>1.10.19</mockito.version>
 
-        <commonsLang.version>3.1</commonsLang.version>
-        <junit.version>4.11</junit.version>
+        <commonsLang.version>3.4</commonsLang.version>
+        <commons-io.version>2.4</commons-io.version>
+        <junit.version>4.12</junit.version>
+
+        <plugin.surefire.version>2.19.1</plugin.surefire.version>
+        <plugin.sonatype.version>1.6.7</plugin.sonatype.version>
+        <plugin.gpg.version>1.6</plugin.gpg.version>
     </properties>
     <build>
         <defaultGoal>install</defaultGoal>
         <plugins>
+
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>${plugin.sonatype.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7.2</version>
+                <version>${plugin.surefire.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>**/*WebTest.java</exclude>
                     </excludes>
                     <useFile>false</useFile>
+                    <argLine>-Djava.net.preferIPv4Stack=true -Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
 
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>3.3</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>2.4</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
+                <version>2.10.3</version>
+                <configuration>
+                    <failOnError>false</failOnError>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -139,38 +156,10 @@
                 </executions>
             </plugin>
 
-            <!-- workaround to auto-install httpclientandroidlib in local repository since it's not in central repository -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <inherited>false</inherited>
-                <executions>
-                    <execution>
-                        <id>install-httpclientandroidlib</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <executable>mvn</executable>
-                    <arguments>
-                        <argument>install:install-file</argument>
-                        <argument>-Dfile=lib/httpclientandroidlib-1.1.2.jar</argument>
-                        <argument>-DgroupId=ch.boye</argument>
-                        <argument>-DartifactId=httpclientandroidlib</argument>
-                        <argument>-Dversion=${httpclientandroidlib.version}</argument>
-                        <argument>-Dpackaging=jar</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>2.7</version>
                 <configuration>
                     <format>xml</format>
                     <maxmem>256m</maxmem>
@@ -182,7 +171,7 @@
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                <version>2.0.1</version>
+                <version>4.0.0</version>
             </plugin>
 
         </plugins>
@@ -266,7 +255,7 @@
             <dependency>
                 <groupId>io.searchbox</groupId>
                 <artifactId>jest-common</artifactId>
-                <version>0.1.1-SNAPSHOT</version>
+                <version>1.0.4-SNAPSHOT</version>
             </dependency>
 
             <!-- Testing Dependencies -->
@@ -280,7 +269,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.4</version>
+                <version>${commons-io.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -308,13 +297,6 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>${log4j.version}</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -351,6 +333,28 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.littleshoot</groupId>
+                <artifactId>littleproxy</artifactId>
+                <version>1.0.0-beta8</version>
+                <scope>test</scope>
+            </dependency>
+        
+            <dependency>
+                <groupId>com.github.spullara.mustache.java</groupId>
+                <artifactId>compiler</artifactId>
+                <version>${mustache.version}</version>
+                <scope>test</scope>
+            </dependency>            
+
+            <!-- required by groovy scripting support in elasticsearch -->
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+                <version>${groovy.version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -366,7 +370,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.7.2</version>
+                        <version>${plugin.surefire.version}</version>
                         <executions>
                             <execution>
                                 <id>surefire-it</id>
@@ -378,6 +382,7 @@
                                     <excludes>
                                         <exclude>none</exclude>
                                     </excludes>
+                                    <argLine>-Djava.net.preferIPv4Stack=true</argLine>
                                 </configuration>
                             </execution>
                         </executions>
@@ -386,18 +391,13 @@
             </build>
         </profile>
         <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
+            <id>sign-artifacts</id>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
+                        <version>${plugin.gpg.version}</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -407,11 +407,6 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-release-plugin</artifactId>
-                        <version>2.3.2</version>
                     </plugin>
                 </plugins>
             </build>
